--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "An FCC Backend Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.12.4",
-    "cors": "^2.8.0"
+    "cors": "^2.8.0",
+    "express": "^4.12.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
